<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Phone">

    <LinearLayout
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/Verify"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/two"
        android:layout_below="@id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/verify_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:text="@string/auto_detect"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <com.chaos.view.PinView
                android:id="@+id/pin_view"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:cursorVisible="true"
                android:inputType="number"
                app:cursorColor="@color/black"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="50dp"
                app:itemWidth="50dp"
                app:lineWidth="1dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginTop="15dp"
            android:text="@string/code"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/two">

        <TextView
            android:layout_width="25dp"
            android:layout_height="23dp"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/sms"
            android:backgroundTint="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_sms"
            android:layout_marginTop="3dp"
            android:textSize="15sp"
            android:layout_marginStart="30dp"/>

    </LinearLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@color/bright_green"
        android:textColor="@android:color/white"
        android:onClick="callNextScreen"
        android:text="@string/bottom"/>

</RelativeLayout>